# ros2-Studies

./: .gitignore
gonca_interfaces/: CMakeLists.txt  package.xml
gonca_interfaces/srv/: BatteryStatus.srv
project_bringup/: CMakeLists.txt  package.xml
project_bringup/launch/: project.launch.py
sample_bringup/: CMakeLists.txt  package.xml
sample_bringup/launch/: activity.launch.py  sample_app.launch.py
tutocpp_pkg/: CMakeLists.txt  package.xml
tutocpp_pkg/src/: activity_04_client.cpp  activity_04_server.cpp  activity_05_pub.cpp  activity_server.cpp  client_node.cpp  hw_info_publisher.cpp  hw_info_subscriber.cpp  my_first_node.cpp  publisher_node.cpp  pubsub_node.cpp  server_node.cpp  subscriber_node.cpp  turtle_follow.cpp  turtle_spawn.cpp
tutopy_pkg/: package.xml  setup.cfg  setup.py
tutopy_pkg/tutopy_pkg/: activity_04_client.py  client_node.py  hw_status_publisher.py  hw_status_subscriber.py  my_first_node.py  publisher_node.py  server_node.py  subscriber_node.py
